# py-prisma-vite

./: .env.exemple  .eslintrc.json  .gitignore  application.py  build.sh  dev-server-index.html  package.json  pyproject.toml  requirements.txt  server.py  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vercel.json  vite-starlite-plugin.ts  vite.config.ts
app/: __init__.py  auth.py  middleware.py
app/auth/: __init__.py  auth_controller.py
app/auth/dto/: __init__.py  auth_dto.py
app/auth/middleware/: __init__.py  jwt_middleware.py
app/chat/: __init__.py  chat_controller.py  chat_service.py
app/chat/dto/: __init__.py
app/message/: __init__.py  message_controller.py  message_service.py
app/message/dto/: __init__.py
app/spa/: __init__.py  spa_controller.py
app/user/: __init__.py  user_controller.py  user_service.py
app/user/dto/: __init__.py  create_user_dto.py
database/: plugin.py  schema.prisma
database/migrations/20230106090322_init/: migration.sql
database/migrations/20230116185603_update_user_profile/: migration.sql
database/migrations/20230128060750_conversation/: migration.sql
database/migrations/20230204060422_conversation_name/: migration.sql
database/migrations/20230214084206_init/: migration.sql
modules/: __init__.py
modules/socketio/: __init__.py  socket_manager.py
public/js/bundle/: main.css  manifest.json
ressources/: __init__.py  vite.py
ressources/assets/js/: App.vue  axiosBase.ts  main.ts  (+4 more)
ressources/views/: app.html.jinja
routes/: __init__.py  api.py  web.py
utils/: __init__.py
websec/: command.py
(+16 files in other folders)
