[tool.poetry]
name = "websec"
version = "0.1.0"
description = ""
authors = ["tsiresymila <tsiresymila@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "websec" },
]


[tool.poetry.dependencies]
python = "^3.10"
starlite = {extras = ["full"], version = "^1.48.1"}
click = "^8.1.3"
prisma = "^0.8.0"
bcrypt = "^4.0.1"
python-socketio = "5.7.2"
python-engineio = "4.3.4"
websockets = "10.4"
pydantic-partial = "^0.3.3"

[tool.poetry.scripts]
db-push = "websec.command:db_push"
db-migrate = "websec.command:migrate"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


